Fixed broken css

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@
 
      p {
        font-size: 15px;
-       font-weight: 400px;
+       font-weight: 400;
        color: #7b879d;
      }
 
